[package]
name = "p2p-service"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = [
  "async-std",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "ping",
  "quic",
  "tokio",
]}
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.86"
rand = "0.8.5"
